# nekobot

./: .gitignore  Cargo.toml  README.md  config.toml
crates/nekobot/: Cargo.toml  README.md
crates/nekobot-channel/: Cargo.toml  README.md
crates/nekobot-channel/src/: entity.rs  lib.rs  types.rs
crates/nekobot-channel/src/channel/: mod.rs  qq.rs  weixin.rs
crates/nekobot-channel/src/entity/: contact.rs
crates/nekobot-core/: Cargo.toml  README.md
crates/nekobot-core/src/: channel_registry.rs  config.rs  lib.rs  provider.rs  registry.rs  session.rs
crates/nekobot-core/src/agent/: middleware.rs  mod.rs  tool.rs  types.rs
crates/nekobot-core/src/entity/: agent.rs  channel_chat_agent.rs  channel_credential.rs  message.rs  mod.rs  persona.rs  sender_gate_state.rs  session.rs
crates/nekobot-core/src/runtime/: channel.rs  mod.rs  session_gate.rs  shell.rs
crates/nekobot-mcp/: Cargo.toml  README.md
crates/nekobot-mcp/src/: lib.rs
crates/nekobot-memory/: Cargo.toml  README.md
crates/nekobot-memory/src/: embedding.rs  entity.rs  lib.rs
crates/nekobot-persona/: Cargo.toml
crates/nekobot-persona/src/: lib.rs
crates/nekobot-provider/: Cargo.toml  README.md
crates/nekobot-provider/src/: deepseek.rs  lib.rs  openai_codex.rs  utils.rs
crates/nekobot-script/: Cargo.toml  README.md
crates/nekobot-script/src/: actor.rs  lib.rs  runner.rs  runtime.rs  ts_check.rs  utils.rs
crates/nekobot-script/src/tools/: eval_ts.rs  mod.rs
crates/nekobot-skill/: Cargo.toml  README.md
crates/nekobot-skill/src/: lib.rs
crates/nekobot-skills/: Cargo.toml
crates/nekobot-skills/src/: lib.rs  loader.rs
crates/nekobot-tool/: Cargo.toml  README.md
crates/nekobot-tools/: Cargo.toml  README.md
crates/nekobot-tools/src/: bash.rs  lib.rs  search.rs  sleep.rs  time.rs
crates/nekobot/src/: main.rs
skills/hello-world/: SKILL.md
src/: config.rs  db.rs  main.rs  responder.rs  tasks.rs
src/providers/: mod.rs  openai.rs
