[package]
name = "nekobot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
dynosaur = "0.1.2"
log = "0.4.25"
pretty_env_logger = "0.5.0"
redis = { version = "0.28.2", features = ["tokio-comp"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
trait-variant = "0.1.2"
