[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = "1.52"
async-trait = "0.1"
anyhow = "1.0"
nekobot-core = { path = "crates/nekobot-core" }
nekobot-provider = { path = "crates/nekobot-provider" }
nekobot-channel = { path = "crates/nekobot-channel" }
nekobot-mcp = { path = "crates/nekobot-mcp" }
nekobot-script = { path = "crates/nekobot-script" }
nekobot-skills = { path = "crates/nekobot-skills" }
nekobot-tools = { path = "crates/nekobot-tools" }
nekobot-memory = { path = "crates/nekobot-memory" }
nekobot-persona = { path = "crates/nekobot-persona" }
turso = "0.5"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.11"
serde_yml = "0.0"
reqwest = "0.13"
