[package]
name = "nekobot-channel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt", "time"] }
turso.workspace = true
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = [
    "rustls-tls-native-roots",
    "connect",
] }
futures-util = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
