[package]
name = "nekobot-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
turso.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
nekobot-channel.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
