[package]
name = "nekobot-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
nekobot-core = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
turso.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
