[package]
name = "nekobot-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
nekobot-core = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["json", "rustls"] }
turso.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
