[package]
name = "nekobot-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
nekobot-core.workspace = true
anyhow.workspace = true
futures-util.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
