[package]
name = "nekobot-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
nekobot-core.workspace = true
anyhow.workspace = true
futures-util.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
