[package]
name = "nekobot-script"
version = "0.1.0"
edition = "2024"

[dependencies]
nekobot-core = { workspace = true }
boa_engine = "0.21"
boa_gc = "0.21"
boa_runtime = { version = "0.21", features = ["fetch", "url"] }
swc_core = { version = "65", features = [
    "ecma_parser",
    "ecma_ast",
    "ecma_visit",
    "ecma_transforms_typescript",
    "ecma_codegen",
    "common",
] }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }
futures-lite = "2.6"
futures-concurrency = "7.7.1"
reqwest = { workspace = true, features = ["json", "stream", "rustls"] }
http = "1.4.0"

[dev-dependencies]
turso.workspace = true
