[package]
name = "nekobot-skill"
version = "0.1.0"
edition = "2024"

[dependencies]
nekobot-core = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
