[package]
name = "nekobot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
nekobot-channel = { workspace = true }
nekobot-core = { workspace = true }
nekobot-provider = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
